G'MIC: stack images when returning the list

The use of recursiveApplyNodes, introduced in
ca0d473bcd570f0332458b296efce25bf6344631 as part of the refactor that
enabled the rest of the input modes, missed a significant subtlety of
the layer enumeration: recursiveApplyNodes works top-down, while
G'MIC expects layers to be sorted bottom-up.

BUG: 456463
(cherry picked from commit 4555c6ee2d605e4cc298ba6d0cfc3375ddcf62af)